--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Moja Strona</title>
 </head>
 <body>
- 
+    <h1>
+        Moja strona c:
+    </h1>
+ <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quisquam voluptatibus delectus quam excepturi doloribus? Officiis, quaerat libero. Velit quis tempore aliquid rem ratione ipsum odio, vero obcaecati delectus voluptatem.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quisquam voluptatibus delectus quam excepturi doloribus? Officiis, quaerat libero. Velit quis tempore aliquid rem ratione ipsum odio, vero obcaecati delectus voluptatem. 
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quisquam voluptatibus delectus quam excepturi doloribus? Officiis, quaerat libero. Velit quis tempore aliquid rem ratione ipsum odio, vero obcaecati delectus voluptatem.
+ </p>
 </body>
 </html>
