--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quisquam voluptatibus delectus quam excepturi doloribus? Officiis, quaerat libero. Velit quis tempore aliquid rem ratione ipsum odio, vero obcaecati delectus voluptatem.
  </p>
  <p>WSB 2021-2022</p>
+ <p>Kamil O</p>
 </body>
 </html>
